--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,10 @@
 # Default for all
 * text=auto
 
-*.csv diff=text eol=crlf
-*.json diff=text eol=crlf
-*.tsv diff=text eol=crlf
-*.xml diff=text eol=crlf
+*.csv diff=text eol=lf
+*.json diff=text eol=lf
+*.tsv diff=text eol=lf
+*.xml diff=text eol=lf
 
 *.md diff=markdown eol=crlf
 *.sh diff=sh eol=lf
